--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Page title -->
-  <title>Nina Church Resume</title>
+  <title>Nina Church Portfolio</title>
   <!-- /Page title -->
 
   <!-- CSS Files
@@ -350,7 +350,7 @@
               <!-- Item Content -->
               <div class="col-md-8 content-wrap bg1">
                 <!-- Section title -->
-                <h2 class="section-title">Education</h2>
+                <h2 class="section-title">Stanford</h2>
                 <!-- /Section title -->
               </div>
               <!-- /Item Content -->
@@ -370,16 +370,17 @@
               <div class="col-md-8 content-wrap bg1">
                 <div class="line-content line-content-education">
                   <!-- Graduation title -->
-                  <h3 class="section-item-title-1">Stanford University</h3>
+                  <h3 class="section-item-title-1">B.S. Science, Technology & Society</h3>
                   <!-- /Graduation title -->
                   <!-- Graduation time -->
-                  <h4 class="graduation-time"><i class="fa fa-university"></i> B.S. Science, Technology & Society - concentration: Innovation, Organization & Technology - <span class="graduation-date">Expected Graduation June 2016</span></h4>
+                  <h4 class="graduation-time"><i class="fa fa-university"></i> Concentration: Innovation, Organization & Technology - <span class="graduation-date">Expected Graduation June 2016</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="graduation-description">
-                    <p>Instead of following a major, I spent my freshman and sophomore years taking upper level and graduate coursework to discover what I was truly interested in. As a result, I already have specialized skills and have learned from some of the most incredible professors and peers imaginable.
+                    <p>Instead of following a major, I spent my freshman and sophomore years taking upper level and graduate coursework to discover what I was truly interested in. As a result, I already have specialized skills and have learned from some of the most incredible professors and peers imaginable. <strong>I believe I am responsible for my education. I seek out learning opportunities that: teach me how to better search or design solutions, push me out of my comfort zone, fill in my blind spots and grow my existing skillsets.</strong>
 
-                    <ol><strong>Coursework Highlights</strong>
+                    <p><strong>Coursework Highlights</strong></p>
+                    <ol>
                       <li><strong>Global Entrepreneurial Marketing:</strong> designed, ran & analyzed 2 marketing campaigns for Yiftee</li>
                       <li><strong>Philanthropy & Social Innovation:</strong> analyzed 12 social case studies and wrote an original business plan under the instruction of Laura Arrillaga-Andreessen </li>
                       <li><strong>Stanford 2025:</strong> student in the original d.school class looking to redesign the future of higher education. Continued on as an independent researcher for the full year long project. </li>
@@ -400,63 +401,7 @@
             </div>
             <!-- /SECTION ITEM -->
 
-            <!-- SECTION ITEM -->
-            <div class="line row">
-              <!-- Margin Collums (necessary for the timeline effect) -->
-              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-              <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height timeline-education "></div>
-              <!-- /Margin Collums -->
-              <!-- Item Content -->
-              <div class="col-md-8 content-wrap bg1">
-                <div class="line-content line-content-education">
-                  <!-- Graduation title -->
-                  <h3 class="section-item-title-1">MASTER OF WEB DESIGN</h3>
-                  <!-- /Graduation title -->
-                  <!-- Graduation time -->
-                  <h4 class="graduation-time"><i class="fa fa-university"></i> St. Patrick University (2 Years Course) - <span class="graduation-date">Graduation May 2013</span></h4>
-                  <!-- /Graduation time -->
-                  <!-- content -->
-                  <div class="graduation-description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                  </div>
-                  <!-- /Content -->
-                </div>
-              </div>
-              <!--/Item Content -->
-              <!-- Margin Collum-->
-              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-              <!-- /Margin Collum-->
-            </div>
-            <!-- /SECTION ITEM -->
 
-             <!-- SECTION ITEM -->
-            <div class="line row">
-              <!-- Margin Collums (necessary for the timeline effect) -->
-              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-              <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height timeline-education "></div>
-              <!-- /Margin Collums -->
-              <!-- Item Content -->
-              <div class="col-md-8 content-wrap bg1">
-                <div class="line-content line-content-education">
-                  <!-- Graduation title -->
-                  <h3 class="section-item-title-1">GRAPHIC DESIGN</h3>
-                  <!-- /Graduation title -->
-                  <!-- Graduation time -->
-                  <h4 class="graduation-time"><i class="fa fa-university"></i> St. Patrick University (2 Years Course) - <span class="graduation-date">Graduation May 2013</span></h4>
-                  <!-- /Graduation time -->
-                  <!-- content -->
-                  <div class="graduation-description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                  </div>
-                  <!-- /Content -->
-                </div>
-              </div>
-              <!-- /Item Content -->
-              <!-- Margin Collum-->
-              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-              <!-- /Margin Collum-->
-            </div>
-            <!-- /SECTION ITEM -->
           </section>
           <!-- ==>> /SECTION: EDUCATION <<==== -->
 
@@ -502,14 +447,31 @@
               <div class="col-md-8 content-wrap bg1">
                 <div class="line-content line-content-education">
                   <!-- Work Place -->
-                  <h3 class="section-item-title-1">Black Tie Corp</h3>
+                  <h3 class="section-item-title-1">Assistant to the CEO</h3>
                   <!-- /work place -->
                   <!-- Graduation time -->
-                  <h4 class="job"><i class="fa fa-flag"></i> Web Designer - <span class="job-date">June 2012 - Current</span></h4>
+                  <h4 class="job"><i class="fa fa-flag"></i> Suja Juice - <span class="job-date">September 2014 - January 2015</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="job-description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>Rather than studying abroad, I took a quarter off from formal coursework and crafted a personalized internship where I shadowed the CEO and executive management team of a rocketship beverage company.
+                      <p><strong>Responsibilities:</strong></p>
+                    <ol>
+                      <li>sat in on all CEO meetings</li>
+                      <li>curated a 360 manager evaluation process</li>
+                      <li>worked alongside the VP of biz dev and an executive consultant to design & implement a 3 month workshop series for all employees on utilizing the "7 Habits of Highly Effective People"</li>
+                      <li>ran a company wide micro-challenge</li>
+                      <li>worked with the publisher, sales & marketing teams to create a plan for an upcoming book launch</li>
+                      <li>Created a 50 page onboarding book using the design thinking process</li>
+                    </ol>
+
+                    <p><strong>Key Learnings</strong></p>
+                    <ol>
+                      <li><strong>CPG is an exciting place to be -</strong> while most of the focus of my sphere in Silicon Valley is on tech, I'm excited by the potential for disruption of distribution models and CPG products themselves when combined with technology.</li>
+                      <li><strong>Organizations can be messy -</strong> particularly during the transition from a startup to more corporate, there are many design opportunities to help manage growing pains.</li>
+                      <li><strong>Innovate or Die -</strong> the type of place I want to be is constantly innovating and improving, looking at how current successes can springboard future ones. </li>
+                    </ol>
+                    </p>
                   </div>
                   <!-- /Content -->
                 </div>
@@ -531,14 +493,31 @@
               <div class="col-md-8 content-wrap bg1">
                 <div class="line-content line-content-education">
                   <!-- Work Place -->
-                  <h3 class="section-item-title-1">Oasis Ltda.</h3>
+                  <h3 class="section-item-title-1">Design Consultant</h3>
                   <!-- /work place -->
                   <!-- Graduation time -->
-                  <h4 class="job"><i class="fa fa-flag"></i> Front-end Developer - <span class="job-date">Jan 2010 - Apr 2012</span></h4>
+                  <h4 class="job"><i class="fa fa-flag"></i> revved - <span class="job-date">Jan 2010 - Apr 2012</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="job-description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>Rather than studying abroad, I took a quarter off from formal coursework and crafted a personalized internship where I shadowed the CEO and executive management team of a rocketship beverage company.
+                      <p><strong>Responsibilities:</strong></p>
+                    <ol>
+                      <li>sat in on all CEO meetings</li>
+                      <li>curated a 360 manager evaluation process</li>
+                      <li>worked alongside the VP of biz dev and an executive consultant to design & implement a 3 month workshop series for all employees on utilizing the "7 Habits of Highly Effective People"</li>
+                      <li>ran a company wide micro-challenge</li>
+                      <li>worked with the publisher, sales & marketing teams to create a plan for an upcoming book launch</li>
+                      <li>Created a 50 page onboarding book using the design thinking process</li>
+                    </ol>
+
+                    <p><strong>Key Learnings</strong></p>
+                    <ol>
+                      <li><strong>CPG is an exciting place to be -</strong> while most of the focus of my sphere in Silicon Valley is on tech, I'm excited by the potential for disruption of distribution models and CPG products themselves when combined with technology.</li>
+                      <li><strong>Organizations can be messy -</strong> particularly during the transition from a startup to more corporate, there are many design opportunities to help manage growing pains.</li>
+                      <li><strong>Innovate or Die -</strong> the type of place I want to be is constantly innovating and improving, looking at how current successes can springboard future ones. </li>
+                    </ol>
+                    </p>
                   </div>
                   <!-- /Content -->
                 </div>
