--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -468,7 +468,7 @@
                     <p><strong>Key Learnings</strong></p>
                     <ol>
                       <li><strong>CPG is an exciting place to be -</strong> while most of the focus of my sphere in Silicon Valley is on tech, I'm excited by the potential for disruption of distribution models and CPG products themselves when combined with technology.</li>
-                      <li><strong>Organizations can be messy -</strong> particularly during the transition from a startup to more corporate, there are many design opportunities to help manage growing pains.</li>
+                      <li><strong>Food has high barriers to entry -</strong> I believe this, combined with the lack of 'sexiness', is why many college students haven't put their energy into it yet. As I cultivate my own knowledge of the food/beverage industry, I hope to help lower the barrier for others through various projects.</li>
                       <li><strong>Innovate or Die -</strong> the type of place I want to be is constantly innovating and improving, looking at how current successes can springboard future ones. </li>
                     </ol>
                     </p>
@@ -496,26 +496,23 @@
                   <h3 class="section-item-title-1">Design Consultant</h3>
                   <!-- /work place -->
                   <!-- Graduation time -->
-                  <h4 class="job"><i class="fa fa-flag"></i> revved - <span class="job-date">Jan 2010 - Apr 2012</span></h4>
+                  <h4 class="job"><i class="fa fa-flag"></i> revved - <span class="job-date">September 2013 - September 2015</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="job-description">
-                    <p>Rather than studying abroad, I took a quarter off from formal coursework and crafted a personalized internship where I shadowed the CEO and executive management team of a rocketship beverage company.
-                      <p><strong>Responsibilities:</strong></p>
+                    <p>Created a design consultancy dedicated to applying cutting-edge design, business and technology strategies to age-old issues in education. I wanted to get more experience 'doing' in the education space, and wanted myself and other students to be able to learn about the education space and business in a hands-on way.
+                      <p><strong>Consulted for:</strong></p>
                     <ol>
-                      <li>sat in on all CEO meetings</li>
-                      <li>curated a 360 manager evaluation process</li>
-                      <li>worked alongside the VP of biz dev and an executive consultant to design & implement a 3 month workshop series for all employees on utilizing the "7 Habits of Highly Effective People"</li>
-                      <li>ran a company wide micro-challenge</li>
-                      <li>worked with the publisher, sales & marketing teams to create a plan for an upcoming book launch</li>
-                      <li>Created a 50 page onboarding book using the design thinking process</li>
+                      <li>consulted for a tutor with a novel teaching method. Did customer development with over 75 relevent users and helped create a private parent news hub.</li>
+                      <li>consulted for an entrepreneur looking to meld female empowerement and education with a passion for food. Helped launch a site, marketing plan, and program components.</li>
+                      <li>worked with a 5 person Stanford team to design an deploy a manual for BloomBoard to be used in Aspire Public Schools.</li>
                     </ol>
 
                     <p><strong>Key Learnings</strong></p>
                     <ol>
-                      <li><strong>CPG is an exciting place to be -</strong> while most of the focus of my sphere in Silicon Valley is on tech, I'm excited by the potential for disruption of distribution models and CPG products themselves when combined with technology.</li>
-                      <li><strong>Organizations can be messy -</strong> particularly during the transition from a startup to more corporate, there are many design opportunities to help manage growing pains.</li>
-                      <li><strong>Innovate or Die -</strong> the type of place I want to be is constantly innovating and improving, looking at how current successes can springboard future ones. </li>
+                      <li><strong>consulting is education -</strong> I gained experience in finance, marketing and strategy in a short time. I believe there is a lot of value for both sides in having college students help small business owners bring their work into the new tech age.</li>
+                      <li><strong>I want to dreams I care about -</strong> whether they're my own dreams or those of someone else who I really believe in, I want to be putting all my energy into making them come true.</li>
+                      <li><strong>Education is messy -</strong> The bureaucracy surrounding most educational institutions is in need of some serious change. I have lots of ideas. </li>
                     </ol>
                     </p>
                   </div>
