updated nika work experience

--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -536,14 +536,31 @@
               <div class="col-md-8 content-wrap bg1">
                 <div class="line-content line-content-education">
                   <!-- Work Place -->
-                  <h3 class="section-item-title-1">Dupstudio</h3>
+                  <h3 class="section-item-title-1">Co-Founder and Spokesperson</h3>
                   <!-- /work place -->
                   <!-- Graduation time -->
-                  <h4 class="job"><i class="fa fa-flag"></i> Designer - <span class="job-date">Jan 2010 - Apr 2012</span></h4>
+                  <h4 class="job"><i class="fa fa-flag"></i> Nika Water - <span class="job-date">2009 - 2013</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="job-description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>After a family trip to Ethiopia and Kenya, I felt powerless. It didn’t make sense in my 14-year-old mind that such disparity could exist between myself and those I'd met. My family and I decided to find a sustainable way to keep girls in developing countries out of early marriages and in school. That was the beginning of Nika Water, an eco-friendly bottled water company born of research, support, and above all love. Nika donated 100% of its profits towards poverty alleviation projects around the world and in it's 4 years gained national distribution and helped bring clean water to over 28,000 people for the rest of their lives.
+
+                      <p><strong>Responsibilities:</strong>
+                      <i>As a family startup, we did whatever was needed. Below are just a few of my highlighted roles.</i>
+                      </p>
+                    <ol>
+                      <li>Helped design the bottle, label, name and tagline of the brand.</li>
+                      <li>worked street fairs to perform customer development</li>
+                      <li>spoke at over 60 events, conferences and workshops running programs on how youth can 'find their passions' and how the world can greater leverage social entrepreneurship.</li>
+                    </ol>
+
+                    <p><strong>Key Learnings</strong></p>
+                    <ol>
+                      <li><strong>you do what you have to do -</strong> if you're the CEO and there's no one else there to drive the truck, you drive it. You have to play smart, but you have to work tirelessly to make a dream come true.</li>
+                      <li><strong>there are A LOT of water companies -</strong> Nika served an amazing role in my family's life. It was ultimately unsustainable because of the highly saturated space.</li>
+                      <li><strong>Social Entrepreneurship is the future -</strong> If our consumer society can engrain social business into our foundation, we can revolutionize the way our society does good. </li>
+                    </ol>
+                    </p>
                   </div>
                   <!-- /Content -->
                 </div>
@@ -565,14 +582,31 @@
               <div class="col-md-8 content-wrap bg1">
                 <div class="line-content line-content-education">
                   <!-- Work Place -->
-                  <h3 class="section-item-title-1">Dotrex Co.</h3>
+                  <h3 class="section-item-title-1">facilitator</h3>
                   <!-- /work place -->
                   <!-- Graduation time -->
                   <h4 class="job"><i class="fa fa-flag"></i> Designer - <span class="job-date">Jan 2010 - Apr 2012</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="job-description">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    <p>After a family trip to Ethiopia and Kenya, I felt powerless. It didn’t make sense in my 14-year-old mind that such disparity could exist between myself and those I'd met. My family and I decided to find a sustainable way to keep girls in developing countries out of early marriages and in school. That was the beginning of Nika Water, an eco-friendly bottled water company born of research, support, and above all love. Nika donated 100% of its profits towards poverty alleviation projects around the world and in it's 4 years gained national distribution and helped bring clean water to over 28,000 people for the rest of their lives.
+
+                      <p><strong>Responsibilities:</strong>
+                      <i>As a family startup, we did whatever was needed. Below are just a few of my highlighted roles.</i>
+                      </p>
+                    <ol>
+                      <li>Helped design the bottle, label, name and tagline of the brand.</li>
+                      <li>worked street fairs to perform customer development</li>
+                      <li>spoke at over 60 events, conferences and workshops running programs on how youth can 'find their passions' and how the world can greater leverage social entrepreneurship.</li>
+                    </ol>
+
+                    <p><strong>Key Learnings</strong></p>
+                    <ol>
+                      <li><strong>you do what you have to do -</strong> if you're the CEO and there's no one else there to drive the truck, you drive it. You have to play smart, but you have to work tirelessly to make a dream come true.</li>
+                      <li><strong>there are A LOT of water companies -</strong> Nika served an amazing role in my family's life. It was ultimately unsustainable because of the highly saturated space.</li>
+                      <li><strong>Social Entrepreneurship is the future -</strong> If our consumer society can engrain social business into our foundation, we can revolutionize the way our society does good. </li>
+                    </ol>
+                    </p>
                   </div>
                   <!-- /Content -->
                 </div>
