--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -551,13 +551,13 @@
                     <ol>
                       <li>Helped design the bottle, label, name and tagline of the brand.</li>
                       <li>worked street fairs to perform customer development</li>
-                      <li>spoke at over 60 events, conferences and workshops running programs on how youth can 'find their passions' and how the world can greater leverage social entrepreneurship.</li>
+                      <li>Spoke at over 60 events, conferences and workshops running programs on how youth can 'find their passions' and how the world can greater leverage social entrepreneurship.</li>
                     </ol>
 
                     <p><strong>Key Learnings</strong></p>
                     <ol>
-                      <li><strong>you do what you have to do -</strong> if you're the CEO and there's no one else there to drive the truck, you drive it. You have to play smart, but you have to work tirelessly to make a dream come true.</li>
-                      <li><strong>there are A LOT of water companies -</strong> Nika served an amazing role in my family's life. It was ultimately unsustainable because of the highly saturated space.</li>
+                      <li><strong>You do what you have to do -</strong> if you're the CEO and there's no one else there to drive the truck, you drive it. You have to play smart, but you have to work tirelessly to make a dream come true.</li>
+                      <li><strong>There are A LOT of water companies -</strong> Nika served an amazing role in my family's life. It was ultimately unsustainable because of the highly saturated space.</li>
                       <li><strong>Social Entrepreneurship is the future -</strong> If our consumer society can engrain social business into our foundation, we can revolutionize the way our society does good. </li>
                     </ol>
                     </p>
@@ -585,26 +585,27 @@
                   <h3 class="section-item-title-1">facilitator</h3>
                   <!-- /work place -->
                   <!-- Graduation time -->
-                  <h4 class="job"><i class="fa fa-flag"></i> Designer - <span class="job-date">Jan 2010 - Apr 2012</span></h4>
+                  <h4 class="job"><i class="fa fa-flag"></i> Me to We Trips - <span class="job-date">July 2013 - September 2013</span></h4>
                   <!-- /Graduation time -->
                   <!-- content -->
                   <div class="job-description">
-                    <p>After a family trip to Ethiopia and Kenya, I felt powerless. It didn’t make sense in my 14-year-old mind that such disparity could exist between myself and those I'd met. My family and I decided to find a sustainable way to keep girls in developing countries out of early marriages and in school. That was the beginning of Nika Water, an eco-friendly bottled water company born of research, support, and above all love. Nika donated 100% of its profits towards poverty alleviation projects around the world and in it's 4 years gained national distribution and helped bring clean water to over 28,000 people for the rest of their lives.
+                    <p>After my involvement in Nika, I worked with one of our key partner organizations helping to faciliate leadership development service trips in Kenya and Ghana for the summer.
 
                       <p><strong>Responsibilities:</strong>
-                      <i>As a family startup, we did whatever was needed. Below are just a few of my highlighted roles.</i>
                       </p>
                     <ol>
-                      <li>Helped design the bottle, label, name and tagline of the brand.</li>
-                      <li>worked street fairs to perform customer development</li>
-                      <li>spoke at over 60 events, conferences and workshops running programs on how youth can 'find their passions' and how the world can greater leverage social entrepreneurship.</li>
+                      <li>Work with 1 co-facilitator on the ground to faciliate the 30 person trips with youth ages 14-22</li>
+                      <li>Ensured the safety of all participants</li>
+                      <li>ran leadership activities and team builders</li>
+                      <li>dealt with any disciplinary issues</li>
+                      <li>worked with the local staff and community to coordinate on site service work</li>
                     </ol>
 
                     <p><strong>Key Learnings</strong></p>
                     <ol>
-                      <li><strong>you do what you have to do -</strong> if you're the CEO and there's no one else there to drive the truck, you drive it. You have to play smart, but you have to work tirelessly to make a dream come true.</li>
-                      <li><strong>there are A LOT of water companies -</strong> Nika served an amazing role in my family's life. It was ultimately unsustainable because of the highly saturated space.</li>
-                      <li><strong>Social Entrepreneurship is the future -</strong> If our consumer society can engrain social business into our foundation, we can revolutionize the way our society does good. </li>
+                      <li><strong>just in time learning is imperative -</strong> learning the difference between absolute and relative poverty while being immersed in it is a game changer. The world needs more JIT learning experiences for takeaways to be better absorbed.</li>
+                      <li><strong>I love building communities -</strong> helping create the tight-knit, supportive communities amongst the group was challenging and the most fun I've ever had.</li>
+                      <li><strong>I highly respect doctors, nurses, and parents -</strong> many sleepless nights of attending to stomach bugs and dehydration gave me this newfound appreciation.</li>
                     </ol>
                     </p>
                   </div>
