--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -634,6 +634,7 @@
             </div>
             <!-- /VERTICAL MARGIN -->
 
+
             <!-- SECTION TITLE -->
             <div class="line row">
               <!-- VERTICAL MARGIN (necessary for the timeline effect) -->
@@ -658,6 +659,62 @@
               <!-- Margin Collums (necessary for the timeline effect) -->
               <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
               <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height timeline-point "></div>
+              <!-- /Margin Collums (necessary for the timeline effect) -->
+              <!-- Item Content -->
+              <div class="col-md-8 content-wrap bg1">
+                <div class="line-content">
+                  <!-- Subtitle -->
+                  <h3 class="section-item-title-1">Code Skills</h3>
+                  <!-- /Subtitle -->
+                  <!-- content -->
+                  <ul class="skills-list">
+                    <!-- item-list -->
+                    <li>
+                      <div class="progress">
+                        <div class="progress-bar" data-percent="100%" role="progressbar" style="width: 100%;">
+                            <span class="sr-only">90% Complete</span>
+                        </div>
+                        <span class="progress-type">HTML5 / CSS3</span>
+
+                      </div>
+                    </li>
+                    <!-- /item list -->
+                    <!-- item-list -->
+                    <li>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-2" data-percent="100%" role="progressbar" style="width: 100%;">
+                            <span class="sr-only">60% Complete</span>
+                        </div>
+                        <span class="progress-type">Javascript (vanilla, Backbone, Meteor)</span>
+                      </div>
+                    </li>
+                    <!-- /item list -->
+                    <!-- item-list -->
+                    <li>
+                      <div class="progress">
+                        <div class="progress-bar progress-bar-3" data-percent="100%" role="progressbar" style="width: 100%;">
+                            <span class="sr-only">40% Complete</span>
+                        </div>
+                        <span class="progress-type">Ruby (Rails, Sinatra)</span>
+                      </div>
+                    </li>
+                    <!-- /item list -->
+                  </ul>
+                  <!-- /Content -->
+                </div>
+              </div>
+              <!-- /Item Content -->
+              <!-- Margin Collum-->
+              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
+              <!-- /Margin Collum-->
+            </div>
+            <!-- /SECTION ITEM -->
+
+            <!-- SECTION ITEM -->
+            <div class="line row">
+              <!-- Margin Collums (necessary for the timeline effect) -->
+              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
+              <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height timeline-point "></div>
               <!-- / Margin Collums -->
               <!-- Item Content -->
               <div class="col-md-8 content-wrap bg1">
@@ -670,33 +727,32 @@
                     <!-- item-list -->
                     <li>
                       <div class="progress">
-                        <div class="progress-bar" role="progressbar" data-percent="70%" style="width: 70%;">
+                        <div class="progress-bar" role="progressbar" data-percent="100%" style="width: 100%;">
                             <span class="sr-only">70% Complete</span>
                         </div>
-                        <span class="progress-type">Comunication</span>
-                        <span class="progress-completed">70%</span>
+                        <span class="progress-type">Public Speaking</span>
+
                       </div>
                     </li>
                     <!-- /item list -->
                     <!-- item-list -->
                     <li>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-2" role="progressbar" data-percent="90%" style="width: 90%;">
+                        <div class="progress-bar progress-bar-2" role="progressbar" data-percent="100%" style="width: 100%;">
                             <span class="sr-only">90% Complete</span>
                         </div>
-                        <span class="progress-type">Leadership</span>
-                        <span class="progress-completed">90%</span>
+                        <span class="progress-type">Faciliation (workshops, team-building, events)</span>
+
                       </div>
                     </li>
                     <!-- /item list -->
                     <!-- item-list -->
                     <li>
                       <div class="progress" title="Doing my best!">
-                        <div class="progress-bar progress-bar-3" role="progressbar" data-percent="85%" style="width: 85%;">
+                        <div class="progress-bar progress-bar-3" role="progressbar" data-percent="100%" style="width: 100%;">
                             <span class="sr-only">85% Complete</span>
                         </div>
-                        <span class="progress-type">Confidence</span>
-                        <span class="progress-completed">85%</span>
+                        <span class="progress-type">Design Thinking</span>
                       </div>
                     </li>
                     <!-- /item list -->
@@ -728,33 +784,33 @@
                     <!-- item-list -->
                     <li>
                       <div class="progress">
-                        <div class="progress-bar" data-percent="85%" role="progressbar" style="width: 85%;">
+                        <div class="progress-bar" data-percent="100%" role="progressbar" style="width: 100%;">
                             <span class="sr-only">85% Complete</span>
                         </div>
-                        <span class="progress-type">Adobe Photoshop</span>
-                        <span class="progress-completed">85%</span>
+                        <span class="progress-type">Design: Adobe Illustrator, Photoshop, Keynote and Powerpoint</span>
+
                       </div>
                     </li>
                     <!-- /item list -->
                     <!-- item-list -->
                     <li>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-2" data-percent="90%" role="progressbar" style="width: 90%;">
+                        <div class="progress-bar progress-bar-2" data-percent="100%" role="progressbar" style="width: 100%;">
                             <span class="sr-only">90% Complete</span>
                         </div>
-                        <span class="progress-type">Adobe Illustrator</span>
-                        <span class="progress-completed">90%</span>
+                        <span class="progress-type">Video: mockup tools, iMovie, Final Cut</span>
+
                       </div>
                     </li>
                     <!-- /item list -->
                     <!-- item-list -->
                     <li>
                       <div class="progress">
-                        <div class="progress-bar progress-bar-3" data-percent="40%" role="progressbar" style="width: 40%;">
+                        <div class="progress-bar progress-bar-3" data-percent="100%" role="progressbar" style="width: 100%;">
                             <span class="sr-only">40% Complete</span>
                         </div>
-                        <span class="progress-type">Adobe Fireworks</span>
-                        <span class="progress-completed">40%</span>
+                        <span class="progress-type">Business: Microsoft Excel, Microsoft Word, Pages, Asana, Google Drive, Dropbox</span>
+
                       </div>
                     </li>
                     <!-- /item list -->
@@ -769,63 +825,7 @@
             </div>
             <!-- /SECTION ITEM -->
 
-            <!-- SECTION ITEM -->
-            <div class="line row">
-              <!-- Margin Collums (necessary for the timeline effect) -->
-              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-              <div class="col-md-2 timeline-progress hidden-sm hidden-xs full-height timeline-point "></div>
-              <!-- /Margin Collums (necessary for the timeline effect) -->
-              <!-- Item Content -->
-              <div class="col-md-8 content-wrap bg1">
-                <div class="line-content">
-                  <!-- Subtitle -->
-                  <h3 class="section-item-title-1">Code Skills</h3>
-                  <!-- /Subtitle -->
-                  <!-- content -->
-                  <ul class="skills-list">
-                    <!-- item-list -->
-                    <li>
-                      <div class="progress">
-                        <div class="progress-bar" data-percent="90%" role="progressbar" style="width: 90%;">
-                            <span class="sr-only">90% Complete</span>
-                        </div>
-                        <span class="progress-type">HTML5 / CSS3</span>
-                        <span class="progress-completed">90%</span>
-                      </div>
-                    </li>
-                    <!-- /item list -->
-                    <!-- item-list -->
-                    <li>
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-2" data-percent="60%" role="progressbar" style="width: 60%;">
-                            <span class="sr-only">60% Complete</span>
-                        </div>
-                        <span class="progress-type">Javascript</span>
-                        <span class="progress-completed">60%</span>
-                      </div>
-                    </li>
-                    <!-- /item list -->
-                    <!-- item-list -->
-                    <li>
-                      <div class="progress">
-                        <div class="progress-bar progress-bar-3" data-percent="40%" role="progressbar" style="width: 40%;">
-                            <span class="sr-only">40% Complete</span>
-                        </div>
-                        <span class="progress-type">PHP</span>
-                        <span class="progress-completed">40%</span>
-                      </div>
-                    </li>
-                    <!-- /item list -->
-                  </ul>
-                  <!-- /Content -->
-                </div>
-              </div>
-              <!-- /Item Content -->
-              <!-- Margin Collum-->
-              <div class="col-md-1 bg1 timeline-space full-height hidden-sm hidden-xs"></div>
-              <!-- /Margin Collum-->
-            </div>
-            <!-- /SECTION ITEM -->
+
           </section>
           <!-- ==>> /SECTION: SKILLS -->
 
