--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -915,18 +915,17 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="img/portfolio-item-zoom.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie purus." class="nivobox" data-lightbox-gallery="portfolio">
+                      <a href="files/jobfitanalysis.pdf" target="_blank" title="download the pdf" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
-                          <p class="zoomi"><i class="fa fa-search"></i></p>
                           <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>[Jobfit]</strong><br/>tech entrepreneurship class pitch deck</p>
+                          <p class="portfolio-item-title"><strong>[Jobfit]</strong><br/>tech entrepreneurship class industry and idea analysis</p>
                         </div>
                         <div class="hover-bg-wrapper">
                           <div class="hover-bg"></div>
                         </div>
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/portfolio-item-thumb.jpg" alt="">
+                          <img src="img/STVP.gif">
                         </div>
                       </a>
                     </div>
@@ -935,11 +934,11 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="img/portfolio-item-zoom.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie purus." class="nivobox" data-lightbox-gallery="portfolio">
+                      <a href="https://www.youtube.com/watch?v=3uK92_RoTZ0" target="blank" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
-                          <p class="zoomi"><i class="fa fa-search"></i></p>
+
                           <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Revved</strong><br/> design consultancy</p>
+                          <p class="portfolio-item-title"><strong>TEDx Youth Talk</strong><br/> speech on social entrepreneurship & youth</p>
                         </div>
                         <div class="hover-bg-wrapper">
                           <div class="hover-bg"></div>
@@ -947,7 +946,7 @@
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
                           <!-- http://site126320-9963-9687.strikingly.com/ -->
-                          <img src="img/portfolio-item-thumb.jpg" alt="">
+                          <img src="img/tedx.jpg" alt="">
                         </div>
                       </a>
                     </div>
