added portfolio pieces

--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -875,12 +875,31 @@
                   <!-- /Subtitle -->
                   <!-- content -->
                   <div class="portfolio-itens clearfix">
-                    <!-- Portfolio item -->
+
+                  <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="https://www.youtube.com/watch?v=YHm0xH_Gdsk" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <p class="portfolio-item-title"><strong>Stanford 2025 Video</strong><br/> my vision for the future of ed</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/dschool.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                  <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
                       <a href="http://www.stanford2025.com/#intro" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
-                          <p class="portfolio-item-title"><strong>Stanford 2025</strong><br/> higher ed design project</p>
+                          <p class="portfolio-item-title"><strong>Stanford 2025</strong><br/> larger overview of higher ed design project</p>
                         </div>
                         <div class="hover-bg-wrapper">
                           <div class="hover-bg"></div>
@@ -888,6 +907,24 @@
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
                           <img src="img/stanford2025.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="http://www.sensaimpact.com/" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <p class="portfolio-item-title"><strong>SENSA</strong><br/> co-founder of the Social Entrepreneurial Student's Association</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/sensa.png" alt="">
                         </div>
                       </a>
                     </div>
@@ -915,6 +952,103 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="https://www.youtube.com/watch?v=3uK92_RoTZ0" target="blank" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>TEDx Youth Talk</strong><br/> speech on social entrepreneurship & youth</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/tedx.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="https://www.youtube.com/watch?v=HIBPmLjkMHU" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>Future Leaders Panel</strong><br/> panel & speech on what motivated youth are doing </p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/cityclub.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="files/toolkit.pdf" target="blank" title="download the file" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>d.velop Toolkit </strong><br/> Revved project</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/d_velop.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="files/microchallenge_graphics.pdf" target="blank" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>Company MicroChallenge</strong><br/>project for Suja Juice</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/microchallenge.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="files/yifteeanalysis.pdf" target="blank"title="download yiftee analysis" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>Yiftee Marketing Analysis</strong><br/>Global Entrepreneurial Markeing Project</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/yifteead.png" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                     <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
                       <a href="files/jobfitanalysis.pdf" target="_blank" title="download the pdf" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
                           <!-- Item short title -->
@@ -934,11 +1068,10 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="https://www.youtube.com/watch?v=3uK92_RoTZ0" target="blank" class="nivobox" data-lightbox-gallery="portfolio">
+                      <a href="https://www.youtube.com/watch?v=ZnsvHTLGuzw" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
-
                           <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>TEDx Youth Talk</strong><br/> speech on social entrepreneurship & youth</p>
+                          <p class="portfolio-item-title"><strong>What would you do with a free afternoon?</strong><br/>Motivational Speech to 1000 person audience at USD</p>
                         </div>
                         <div class="hover-bg-wrapper">
                           <div class="hover-bg"></div>
@@ -946,67 +1079,7 @@
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
                           <!-- http://site126320-9963-9687.strikingly.com/ -->
-                          <img src="img/tedx.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="img/portfolio-item-zoom.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie purus." class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <p class="zoomi"><i class="fa fa-search"></i></p>
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>d.velop Toolkit </strong><br/> project through Revved</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/portfolio-item-thumb.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="img/portfolio-item-zoom.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie purus." class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <p class="zoomi"><i class="fa fa-search"></i></p>
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Suja MicroChallenge</strong><br/> project</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/portfolio-item-thumb.jpg" alt="">
-                        </div>
-                      </a>
-                    </div>
-                    <!-- /Portfolio item -->
-
-                    <!-- Portfolio item -->
-                    <div class="portfolio-item">
-                      <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="img/portfolio-item-zoom.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie purus." class="nivobox" data-lightbox-gallery="portfolio">
-                        <div class="hover">
-                          <p class="zoomi"><i class="fa fa-search"></i></p>
-                          <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>Yiftee Valentine's Day Campaign</strong><br/>project</p>
-                        </div>
-                        <div class="hover-bg-wrapper">
-                          <div class="hover-bg"></div>
-                        </div>
-                        <div class="portfolio-item-thumbnail">
-                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/portfolio-item-thumb.jpg" alt="">
+                          <img src="img/usd.png" alt="">
                         </div>
                       </a>
                     </div>
