added portfolios pieces, need to fix flow

--- a/vertica-html/index.html
+++ b/vertica-html/index.html
@@ -1027,6 +1027,25 @@
                     </div>
                     <!-- /Portfolio item -->
 
+                      <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="https://www.youtube.com/watch?v=sNDqa2wyx5g" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>International Women's Breakfast Speech</strong><br/> "Voices of the Future" guest speaker </p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <img src="img/womensday.jpeg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
@@ -1068,6 +1087,46 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="https://www.youtube.com/watch?v=9LnByF7igtg" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>Nika Water Video</strong><br/>The Water Crisis</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <!-- http://site126320-9963-9687.strikingly.com/ -->
+                          <img src="img/bottles.jpg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
+                      <a href="http://nikawater.org/" target="_blank" class="nivobox" data-lightbox-gallery="portfolio">
+                        <div class="hover">
+                          <!-- Item short title -->
+                          <p class="portfolio-item-title"><strong>Nika Water Website</strong><br/>Eco-friendly bottled water that donates 100% of its profits towards poverty alleviation projects</p>
+                        </div>
+                        <div class="hover-bg-wrapper">
+                          <div class="hover-bg"></div>
+                        </div>
+                        <div class="portfolio-item-thumbnail">
+                          <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
+                          <!-- http://site126320-9963-9687.strikingly.com/ -->
+                          <img src="img/nika.jpeg" alt="">
+                        </div>
+                      </a>
+                    </div>
+                    <!-- /Portfolio item -->
+
+                    <!-- Portfolio item -->
+                    <div class="portfolio-item">
+                      <!-- Link to the item image (Put the long description on  "a" title)-->
                       <a href="https://www.youtube.com/watch?v=ZnsvHTLGuzw" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
                           <!-- Item short title -->
@@ -1088,18 +1147,18 @@
                     <!-- Portfolio item -->
                     <div class="portfolio-item">
                       <!-- Link to the item image (Put the long description on  "a" title)-->
-                      <a href="img/portfolio-item-zoom.jpg" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed molestie purus." class="nivobox" data-lightbox-gallery="portfolio">
+                      <a href="http://ycore.org/" target="blank" class="nivobox" data-lightbox-gallery="portfolio">
                         <div class="hover">
                           <p class="zoomi"><i class="fa fa-search"></i></p>
                           <!-- Item short title -->
-                          <p class="portfolio-item-title"><strong>YCore Fellows</strong><br/> website</p>
+                          <p class="portfolio-item-title"><strong>YCore Social Impact Network</strong><br/>fellow</p>
                         </div>
                         <div class="hover-bg-wrapper">
                           <div class="hover-bg"></div>
                         </div>
                         <div class="portfolio-item-thumbnail">
                           <!-- Thumbnail of the portfolio image (400x360 for retina display) -->
-                          <img src="img/portfolio-item-thumb.jpg" alt="">
+                          <img src="img/ycore.png" alt="">
                         </div>
                       </a>
                     </div>
